--- a/app/views/statements/new.html.erb
+++ b/app/views/statements/new.html.erb
@@ -1,2 +1,7 @@
 <h1>Statements#new</h1>
 <p>Find me in app/views/statements/new.html.erb</p>
+
+<%= simple_form_for @statement do |f| %>
+  <%= f.input :content %>
+  <%= f.submit %>
+<% end %>
